samples/_failures_safe/1761662488_42b739_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3f077acf.c: In function ‘analyze_logs’:
./samples/SAFE/__tmp_3f077acf.c:137:9: error: expected expression at end of input
  137 |         int show_count =
      |         ^~~
./samples/SAFE/__tmp_3f077acf.c:137:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_3f077acf.c:137:9: error: expected declaration or statement at end of input
